@@ -6,7 +6,7 @@
 # module for configuration handling
 #
 #
-# Copyright (c) 2003-2005 Erik Grinaker
+# Copyright (c) 2003-2006 Erik Grinaker
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
@@ -35,7 +35,7 @@ DATAVERSION	= 1
 RELNAME		= "Quick, like a bunny"
 URL		= "http://oss.codepoet.no/revelation/"
 AUTHOR		= "Erik Grinaker <erikg@codepoet.no>"
-COPYRIGHT	= "Copyright \302\251 2003-2005 Erik Grinaker"
+COPYRIGHT	= "Copyright \302\251 2003-2006 Erik Grinaker"
 
 DIR_GCONFSCHEMAS= "@pkgschemadir@"
 DIR_ICONS	= "@datadir@/icons"
